syntax = "proto3";

option go_package ="../phe";
package phe;

service KeyPairGen{
  rpc Negotiation (NegotiationBegin) returns (NegotiationResponse){}
  rpc ThirdPartGeneration (T2Generation) returns (T2Response){}
  rpc ZKProof (ProofOfX) returns (ProverResponse){}
  rpc Rotate (UpdateRequest) returns (UpdateToken){}
}

message NegotiationBegin {
  bytes Xs = 1;
}

message NegotiationResponse {
  bytes X0 = 1;
}

message T2Generation{
  bytes E1 = 1;
  bytes E2 = 2;
  bytes E3 = 3;
}

message T2Response{
  bytes T2 = 1;
}

message ProofOfX{
  bytes Flag = 1;
  bytes TT0 = 2;
}

message ProverResponse{
  bytes C0 = 1;
  bytes C1 = 2;
  bytes U = 3;
  bytes GX1R = 4;
  bytes X1 = 5;
}

message UpdateRequest{
  bytes Gr = 1;
}

message UpdateToken{
  bytes Delta0 = 1;
  bytes Delta1 = 2;
}